--- a/index.html
+++ b/index.html
@@ -9,158 +9,47 @@
 <body>
     <div class="container">
         <h1 class="pixel-text">CODING QUEST</h1>
-        <p class="pixel-text">Your mission begins now! Choose your role below to start your journey.</p>
-        
-        <!-- Role Buttons -->
-        <div id="taskButtons">
-            <button id="startButtonA">Start Person A's Quest</button>
-            <button id="startButtonB">Start Person B's Quest</button>
-            <button id="startButtonC">Start Person C's Quest</button>
+        <p class="pixel-text">Welcome to the Coding Quest! Ready to embark on an adventure?</p>
+
+        <!-- Person A Instructions -->
+        <div class="step" id="stepA">
+            <p class="pixel-text">Person A:</p>
+            <p class="pixel-text">You are going to be the leader of this quest, and will be the creator of this website.</p>
+            <p class="pixel-text">Step 1: Create a Repository on GitHub.</p>
+            <p class="pixel-text">Go to GitHub, click the '+' button near the search bar, select 'New Repository.' Make it public, name it, add a README, then go to Collaborators & Teams: Add Collaborators and give your team the admin role.</p>
+            <button class="nextButton" onclick="nextStep('stepB')">Click when done</button>
         </div>
 
-        <!-- Person A's Task Section -->
-        <div id="personA" class="hidden">
-            <h2 class="pixel-text">Person A: The Creator</h2>
-            <p class="pixel-text">You are the leader of this quest. Your first task is to create the repository and gather your team!</p>
-
-            <!-- Task 1 -->
-            <div class="task" id="taskA1">
-                <h3 class="pixel-text">Step 1: Create the Repository on GitHub</h3>
-                <p>Go to GitHub, click the '+' button near the search bar, select 'New Repository'. Make it public, name it, and add a README. Under 'Collaborators & Teams', click 'Add Collaborators' and add your team. Give them the Admin role.</p>
-                <button class="nextBtn" id="nextA1">Next</button>
-            </div>
-
-            <!-- Task 2 -->
-            <div class="task hidden" id="taskA2">
-                <h3 class="pixel-text">Step 2: Create `script.js`</h3>
-                <p>Copy the JavaScript code below into your new file `script.js`:</p>
-                <pre><code>document.addEventListener("DOMContentLoaded", () => {
-    const revealButton = document.getElementById("revealButton");
-    const hiddenMessage = document.getElementById("hiddenMessage");
-
-    revealButton.addEventListener("click", () => {
-        hiddenMessage.style.display = "block"; // Show the hidden message
-        revealButton.style.display = "none";  // Hide the button after clicking
-    });
-});</code></pre>
-                <button class="nextBtn" id="nextA2">Next</button>
-            </div>
-
-            <!-- Task 3 -->
-            <div class="task hidden" id="taskA3">
-                <h3 class="pixel-text">Step 3: Help Fix Mistakes</h3>
-                <p>Everyone has made mistakes in their code! It's time for you to help each other using GitHub's pull and push feature.</p>
-                <button class="nextBtn" id="nextA3">Next</button>
-            </div>
-
-            <!-- Task 4 -->
-            <div class="task hidden" id="taskA4">
-                <h3 class="pixel-text">Step 4: Fun Facts</h3>
-                <ul class="pixel-text">
-                    <li>Fun fact: This event is run by SWE (Society of Women Engineers)!</li>
-                    <li>Fun fact 2: GitHub was founded in April 2008.</li>
-                    <li>Fun fact 3: GitHub HQ is in San Francisco.</li>
-                </ul>
-                <button class="nextBtn" id="nextA4">Next</button>
-            </div>
-
-            <!-- Task 5 -->
-            <div class="task hidden" id="taskA5">
-                <h3 class="pixel-text">Step 5: Deploy the Website</h3>
-                <p>Go to Settings → Pages → Select 'main' branch and folder 'root', then save. Wait a few seconds and the website will be live!</p>
-                <button class="nextBtn" id="nextA5">Next</button>
-            </div>
+        <!-- Person B Instructions -->
+        <div class="step hidden" id="stepB">
+            <p class="pixel-text">Person B:</p>
+            <p class="pixel-text">You will be in charge of the HTML file (the backbone of the website). Wait for Person A to make the repository, and you will receive an invite in your GitHub notifications. Click the button below once you are in.</p>
+            <button class="nextButton" onclick="nextStep('stepC')">Click when done</button>
         </div>
 
-        <!-- Person B's Task Section -->
-        <div id="personB" class="hidden">
-            <h2 class="pixel-text">Person B: The HTML Master</h2>
-            <p class="pixel-text">You are in charge of creating the HTML file. But first, wait for Person A to create the repository. Once you have access, click below!</p>
-            <button class="nextBtn" id="inRepoB">Next</button>
-
-            <div class="task hidden" id="taskB1">
-                <h3 class="pixel-text">Step 1: Create `index.html`</h3>
-                <p>Copy the HTML code below into your new file `index.html`:</p>
-                <pre><code>&lt;!DOCTYPE html&gt;
-&lt;html lang="en"&gt;
-&lt;head&gt;
-    &lt;meta charset="UTF-8"&gt;
-    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-    &lt;title&gt;Pixel Art Celebration&lt;/title&gt;
-    &lt;link rel="stylesheet" href="style.css"&gt;
-&lt;/head&gt;
-&lt;body&gt;
-    &lt;div class="container"&gt;
-        &lt;button id="revealButton"&gt;Click to See&lt;/button&gt;
-        &lt;div id="hiddenMessage"&gt;
-            &lt;p&gt;🎉 &lt;span class="pixel-text"&gt;[BLANK 1]&lt;/span&gt;&lt;/p&gt;
-            &lt;p&gt;&lt;span class="pixel-text"&gt;[BLANK 2]&lt;/span&gt;&lt;/p&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-    &lt;script src="script.js"&gt;&lt;/script&gt;
-&lt;/body&gt;
-&lt;/html&gt;</code></pre>
-                <button class="nextBtn" id="nextB1">Next</button>
-            </div>
-
-            <div class="task hidden" id="taskB2">
-                <h3 class="pixel-text">Step 2: Help Fix Mistakes</h3>
-                <p>Oh no! There's a bug in the HTML. Help fix it!</p>
-                <button class="nextBtn" id="nextB2">Next</button>
-            </div>
-
-            <div class="task hidden" id="taskB3">
-                <h3 class="pixel-text">Secret Quest</h3>
-                <p>Change [BLANK 1] with "Congratulations!" and [BLANK 2] with "Your team has earned a Certificate in GitHub!"</p>
-                <button class="nextBtn" id="nextB3">Next</button>
-            </div>
+        <!-- Person C Instructions -->
+        <div class="step hidden" id="stepC">
+            <p class="pixel-text">Person C:</p>
+            <p class="pixel-text">You are in charge of the CSS file, the fun styling part! Wait for Person A to make the repository, and you will receive the invite in your GitHub notifications. Click the button below once you are in.</p>
+            <button class="nextButton" onclick="nextStep('stepD')">Click when done</button>
         </div>
 
-        <!-- Person C's Task Section -->
-        <div id="personC" class="hidden">
-            <h2 class="pixel-text">Person C: The CSS Wizard</h2>
-            <p class="pixel-text">Your role is to style the website. But first, wait for Person A to create the repository. Once you have access, click below!</p>
-            <button class="nextBtn" id="inRepoC">Next</button>
-
-            <div class="task hidden" id="taskC1">
-                <h3 class="pixel-text">Step 1: Create `style.css`</h3>
-                <p>Copy the CSS code below into your new file `style.css`:</p>
-                <pre><code>/* Add your custom styles here */
-body {
-    background-color: #1e1e1e;
-    color: #fff;
-    font-family: 'Courier New', Courier, monospace;
-}
-
-/* More CSS styling here... */
-</code></pre>
-                <button class="nextBtn" id="nextC1">Next</button>
-            </div>
-
-            <div class="task hidden" id="taskC2">
-                <h3 class="pixel-text">Step 2: Help Fix Mistakes</h3>
-                <p>Fix the style bugs and make the webpage look better!</p>
-                <button class="nextBtn" id="nextC2">Next</button>
-            </div>
-
-            <div class="task hidden" id="taskC3">
-                <h3 class="pixel-text">Fun Facts</h3>
-                <ul class="pixel-text">
-                    <li>Fun fact: GitHub was founded in April 2008.</li>
-                    <li>Fun fact 2: GitHub HQ is in San Francisco.</li>
-                </ul>
-                <button class="nextBtn" id="nextC3">Next</button>
-            </div>
-
-            <div class="task hidden" id="taskC4">
-                <h3 class="pixel-text">Step 3: Deploy the Website</h3>
-                <p>Go to Settings → Pages → Select 'main' branch and folder 'root', then save. Wait a few seconds and the website will be live!</p>
-                <button class="nextBtn" id="nextC4">Next</button>
-            </div>
+        <!-- Final Task -->
+        <div class="step hidden" id="stepD">
+            <p class="pixel-text">Final Step: Let's deploy!</p>
+            <p class="pixel-text">Go to settings ⇒ Pages ⇒ Choose branch 'main' and folder 'root' then click save. Wait a few seconds for the website to deploy. You will see it on the GitHub code page.</p>
+            <button class="nextButton" onclick="nextStep('certificateInput')">Click when done</button>
         </div>
+
+        <!-- Certificate Input -->
+        <div class="step hidden" id="certificateInput">
+            <p class="pixel-text">Enter the following code for your certificate:</p>
+            <input type="text" id="certificateInputField" placeholder="Enter Code Here" />
+            <button class="nextButton" onclick="submitCertificate()">Submit Certificate</button>
+        </div>
+
     </div>
 
-    <script src="script.js"></script>
-</body>
-</html>
+    <script src="script.js"></s
+
 
