--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Team Activity</title>
+    <title>CodeQuest: The GitHub Adventure</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="pixel-text">GitHub Team Activity</h1>
-        <p class="pixel-text">Choose your role to start:</p>
+        <h1 class="pixel-text">CodeQuest: The GitHub Adventure</h1>
+        <p class="pixel-text">Choose your role to begin the mission:</p>
         <div class="options">
-            <button id="optionA">Option A</button>
-            <button id="optionB">Option B</button>
-            <button id="optionC">Option C</button>
+            <button id="roleA">Person A</button>
+            <button id="roleB">Person B</button>
+            <button id="roleC">Person C</button>
         </div>
-        <div id="taskContainer" class="hidden">
-            <p id="taskDescription" class="pixel-text"></p>
-            <button id="nextTask" class="hidden">Next Task</button>
+        <div id="instructionContainer" class="hidden">
+            <p id="instructionText" class="pixel-text"></p>
+            <pre id="codeSnippet" class="hidden"></pre>
+            <button id="actionButton" class="hidden">Done</button>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
 
